clang/test/BSC/Method/Enum/enum_this_param_check.cbs
// RUN: %clang_cc1 -verify %s

enum E {
    X3,
    X4
};

int enum E::getA(enum E this); // expected-error {{enum E is not supported on this target}}

